version/0.19/_sources/api/solver/_autosummary/settings/settings.rst.txt
:orphan:

.. _settings:

settings
========

.. autoclass:: ansys.fluent.core.solver.settings_241.settings.settings
    :show-inheritance:

.. rubric:: Attributes

==================================================================================   ==============================================================================================================

Attribute                                                                                                                                                                                   Summary

==================================================================================   ==============================================================================================================
:ref:`cgns_export_filetype <cgns_export_filetype>`                                                                                                      Select HDF5 or ADF as file format for CGNS.

:ref:`cgns_mesh_type <cgns_mesh_type>`                                                                                                                                      'cgns_mesh_type' child.

:ref:`cgns_polyhedral_cpu_threads <cgns_polyhedral_cpu_threads>`                                                                                            Enter CPU threads for CGNS Poly export.

:ref:`cgns_merge_ngons_to_single_ngon <cgns_merge_ngons_to_single_ngon>`                                                                            Merges multiple CGNS NGON_n s to single NGON_n.

:ref:`cgns_default_cellsize_changes <cgns_default_cellsize_changes>`                                                                               Enable/disable default CGNS cellsize correction.

:ref:`cgns_enhance_poly_export_performance <cgns_enhance_poly_export_performance>`       Disable NGON_n performance improvements if experiencing issues with exporting polyhedral elements to cgns.

==================================================================================   ==============================================================================================================

.. rubric:: Included in:

======================   ==========================

Parent                                      Summary

======================   ==========================
:ref:`export <export>`       Enter the export menu.

======================   ==========================

