version/0.25/_sources/api/solver/_autosummary/settings/settings.rst.txt
:orphan:

.. _settings:

settings
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.settings.settings
    :show-inheritance:

.. rubric:: Attributes

==================================================================================   ==============================================================================================================

Attribute                                                                                                                                                                                   Summary

==================================================================================   ==============================================================================================================
:ref:`cgns_export_filetype <cgns_export_filetype>`                                                                                                      Select HDF5 or ADF as file format for CGNS.

:ref:`cgns_mesh_type <cgns_mesh_type>`                                                                  Allows you to choose whether the mesh is mixed (default), its native format, or polyhedral.

:ref:`cgns_polyhedral_cpu_threads <cgns_polyhedral_cpu_threads>`                                                                                            Enter CPU threads for CGNS Poly export.

:ref:`cgns_merge_ngons_to_single_ngon <cgns_merge_ngons_to_single_ngon>`                                                                            Merges multiple CGNS NGON_n s to single NGON_n.

:ref:`cgns_default_cellsize_changes <cgns_default_cellsize_changes>`                                                                               Enable/disable default CGNS cellsize correction.

:ref:`cgns_enhance_poly_export_performance <cgns_enhance_poly_export_performance>`       Disable NGON_n performance improvements if experiencing issues with exporting polyhedral elements to cgns.

:ref:`cgns_familyname <cgns_familyname>`                                                                                   Specifies that boundary conditions are FamilySpecified in CGSN ZoneBC_t.

:ref:`cgns_separate_cellzones <cgns_separate_cellzones>`                                                                                     Exports separate CGNS zone_t for individual cell zone.

==================================================================================   ==============================================================================================================

.. rubric:: Included in:

======================   ===============================

Parent                                           Summary

======================   ===============================
:ref:`export <export>`       Allows you to export files.

======================   ===============================

